Daddy's company website

--- a/index.html
+++ b/index.html
@@ -8,119 +8,89 @@
 	<meta name="country" content="Vietnam"/>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/main.js"></script>
-	<link rel="icon" href="assets/logo.png" sizes="any" type="image/png">
-	<title>Danielcoder</title>
+	<link rel="icon" href="assets/logo.jpg" sizes="any" type="image/png">
+	<title>THIEN AN MACHINERY</title>
 </head>
 <body>
-	<nav>
-		<a href="#contact" class="left_menu">About</a>
-		<a href="#edu" class="left_menu">Education</a>
-		<a href="#age" class="left_menu">Age</a>
-		<a href="#convert" class="left_menu">Convert</a>
-		<a href="#fb" class="right_menu">Social media</a>
+	<div id="logo">
+		<img src="assets/logo.jpg" alt="logo" width="200" height="200" />
+	</div>
+	<h1> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </h1>
+	<nav> <!--- Menu of website --->
+		<a href="#contact" class="left_menu">GIỚI THIỆU</a>
+		<a href="#machines" class="left_menu">SẢN PHẨM</a>
+		<a href="#payment" class="left_menu">THANH TOÁN</a>
+		<a href="#fb" class="right_menu">LIÊN HỆ</a>
 	</nav>
-	<div id="flex_container">
+	<div id="flex_container"> <!-- Content container -->
 		<div id="left_side">
-			<h2 id="contact"> About me </h2>
-			<img src="assets/logo.png" alt="logo" width="200" height="200" />
-			<p> <em> I'm a student in Tran Dai Nghia High School. </em> </p>
-			<ul>
-				<li> <strong> Full name: </strong> Nguyễn Dư Đăng Khoa </li>
-				<li> <strong> Country: </strong> Vietnam </li>
-			</ul>
-			<h2 id="edu"> Education </h2>
-			<ol>
-				<li> IC3 Spark third prize </li>
-				<li> IC3 GS4 consolation prize </li>
-				<li> Vo Van Tan Primary School </li>
-				<li> Tran Dai Nghia High School for the Gifted </li>
-			</ol>
-			<h2 id="age"> Ages </h2>
-			<table>
-				<tr>
-					<th>Firstname</th>
-					<th>Lastname</th>
-					<th>Age</th>
-				</tr>
-				<tr>
-					<td>Cong Hai</td>
-					<td>Nguyen</td>
-					<td>48</td>
-				</tr>
-				<tr>
-					<td>My Muoi</td>
-					<td>Du</td>
-					<td>42</td>
-				</tr>
-				<tr>
-					<td>Khanh Chieu</td>
-					<td>Du</td>
-					<td>24</td>
-				</tr>
-				<tr>
-					<td>Khanh Nguyen</td>
-					<td>Du</td>
-					<td>22</td>
-				</tr>
-				<tr>
-					<td>Dang Khoa</td>
-					<td>Nguyen</td>
-					<td>14</td>
-				</tr>
-				<tr>
-					<td>Xuan Nghi</td>
-					<td>Nguyen</td>
-					<td>11</td>
-				</tr>
-			</table>
-			<h2 id="fb">Social media</h2>
-			<p id="social">FACEBOOK: <a href="https://www.facebook.com/profile.php?id=100060726918218">NGUYỄN DƯ ĐĂNG KHOA</a></p>
-			<p> ZALO: +84335912113 </p>
-		</div>
-		<div id="right_side">
-			<h2 id="licenses">Genuine Licenses</h2>
-			<div id="licenses_container">
-				<div class="licenses_item">
-					<img class="licenses_img" src="assets/windows_10_home.jpg" alt="Windows">
-					<div class="licenses_title"> Windows 10 Home Retail </div>
-					<div class="licenses_description"> Having outstanding features, updates, supports, and performance </div>
-				</div>
-				<div class="licenses_item">
-					<img class="licenses_img" src="assets/microsoft_365.png" alt="Windows">
-					<div class="licenses_title"> Microsoft 365 for enterprise </div>
-					<div class="licenses_description"> Interacting with documents, spreadsheets, and presentations </div>
-				</div>
-				<div class="licenses_item">
-					<img class="licenses_img" src="assets/idm.jpg" alt="Windows">
-					<div class="licenses_title"> Internet Download Manager </div>
-					<div class="licenses_description"> Downloading enormous files with incredible speed </div>
-				</div>
-				<div class="licenses_item">
-					<img class="licenses_img" src="assets/kis.jpg" alt="Windows">
-					<div class="licenses_title"> Kaspersky Internet Security </div>
-					<div class="licenses_description"> Providing powerful security </div>
-				</div>
-				<div class="licenses_item">
-					<img class="licenses_img" src="assets/canva.png" alt="Windows">
-					<div class="licenses_title"> Canva Pro </div>
-					<div class="licenses_description"> Making excellent presentations </div>
-				</div>
-				<div class="licenses_item">
-					<img class="licenses_img" src="assets/notion.png" alt="Windows">
-					<div class="licenses_title"> Notion Pro </div>
-					<div class="licenses_description"> Making convenient notes and websites </div>
-				</div>
-			</div>
-			<h2 id="convert">Convert USD to VND</h2>
-			<label for="usd">USD:</label>
-			<input type="text" id="usd" name="usd"><br><br>
-			<button type="button" id="USD">Click to convert</button>
-			<p id="mes"></p>
+			<h2 id="contact"> GIỚI THIỆU </h2>
+			<p> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN chuyên thiết kế, chế tạo máy móc, thiết bị cho các ngành sau: </p>
+			<p>-	Chế tạo máy dược phẩm, thực phẩm, thực phẩm chức năng, thú y, hóa mỹ phẩm… phù hợp tiêu chuẩn GMP, bằng inox 304 hoặc 316; năng suất từ 3kg/mẻ dùng cho phòng nghiên cứu (R&D) đến năng suất 600kg/ mẻ với các dòng máy chính như sau: </p>
+			<ul>	o Máy nghiền búa. </ul>
+			<ul>	o Máy trộn các dạng: máy trộn ướt, máy trộn khô, máy trộn siêu tốc, máy trộn lập phương, máy trộn chữ S, máy trộn cánh xoắn, máy trộn chữ Z,… </ul>
+			<ul>	o Máy sấy tầng sôi, máy sấy tầng sôi tạo hạt, tủ sấy tĩnh, tủ sấy chân không… </ul>
+			<ul>	o Máy tạo hạt ướt, máy sửa hạt khô. </ul>
+			<ul>	o Máy bao phim. </ul>
+			<ul>	o Các loại bồn chứa, bồn khuấy, bồn đồng hóa, bồn gia nhiệt bằng điện trở hoặc steam. </ul>
+			<ul>	o Lọc dung dịch. </ul>
+			<ul>	o Máy chiết rót dung dịch tự động hoặc bán tự động, chiết rót kiểu xylanh hoặc bơm nhu động. </ul>
+			<p>-	Dịch vụ sửa chữa, bảo trì máy móc thiết bị. </p>
+			<p>-	Thiết kế, thi công hệ thống điện, tự động hóa, SCADA, PLC, HMI,… </p>
+			<p>-	Nghiên cứu và phát triển thực nghiệm khoa học kỹ thuật. </p>
+			<p>Với mong muốn được thiết lập mối quan hệ hợp tác lâu dài với Quý khách hàng, chúng tôi luôn cố gắng và phát huy tiềm lực của mình nhằm mang lại cho khách hàng những sản phẩm đạt chất lượng tốt, phong cách phục vụ chu đáo và giá cả cạnh tranh.</p>
+
+			<h2 id="machines"> MỘT SỐ SẢN PHẨM NỔI BẬT </h2>
+			<p><a id="machines_link" href="maysaytangsoi.html">Máy Sấy Tầng Sôi</a></p>
+			<p><a id="machines_link" href="maysaytangsoitaohat.html">Máy Sấy Tầng Sôi Tạo Hạt</a></p>
+			<p><a id="machines_link" href="maytronsieutoc.html">Máy Trộn Siêu Tốc</a></p>
+			<p><a id="machines_link" href="maybaophim.html">Máy Bao Phim</a></p>
+			<p>Máy Trộn Lập Phương</p>
+			<li><a id="sub_machines_link" href="maytroncube1goi.html"> Máy Trộn Lập Phương 1 Gối </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="maytroncube2goi.html"> Máy Trộn Lập Phương 2 Gối </a></li>
+			<p>Tủ Sấy Tĩnh</p>
+			<li><a id="sub_machines_link" href="tusaytinhdoiluutuanhoan.html"> Tủ Sấy Tĩnh Đối Lưu Tuần Hoàn </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="tusaytinhkhongtuanhoan.html"> Tủ Sấy Tĩnh Không Tuần Hoàn </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="tusaychankhong.html"> Tủ Sấy Chân Không </a></li>
+			<p><a id="machines_link" href="mayxathatcaotoc.html">Máy Xát Hạt Cao Tốc</a></p>
+			<p><a id="machines_link" href="maynghien-xaybua.html">Máy Nghiền (Xay) Búa</a></p>
+			<p><a id="machines_link" href="maylauviennang.html">Máy Lau Viên Nang</a></p>
+			<p><a id="machines_link" href="mayhutbuicongnghiep.html">Máy Hút Bụi Công Nghiệp</a></p>
+			<p>Máy Thuốc Nước</p>
+			<li><a id="sub_machines_link" href="noinau-khuay.html"> Nồi Nấu, Khuấy </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="noinau-khuaytu.html"> Nồi Nấu, Khuấy Từ </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="noidonghoa.html"> Nồi Đồng Hoá </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="mayruachai.html"> Máy Rửa Chai </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="maylocdungdich.html"> Máy Lọc Dung Dịch </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="tusaychai.html"> Tủ Sấy Chai </a></li>
+			<br>
+			<li><a id="sub_machines_link" href="maychietchaibomnhudong4voi.html"> Máy Chiết Chai Bơm Nhu Động 4 Vòi </a></li>
+			<p><a id="machines_link" href="noinaukdhck.html">Nồi Nấu Khuấy Đồng Hoá Chân Không (Pha Chế Kem)</a></p>
+			<p><a id="machines_link" href="maychietkem2voi.html">Máy Chiết Kem 2 Vòi</a></p>
+
+			<h2 id="payment">THÔNG TIN CHUYỂN KHOẢN</h2>
+			<ul> 060145300986 - Công Ty Cổ Phần Chế Tạo Máy Thiên An - Ngân Hàng TMCP SÀI GÒN THƯƠNG TÍN (SACOMBANK) Phòng Giao Dịch BÌNH PHÚ </ul>
 		</div>
 	</div>
 	<footer>
-		<p>Owned by Nguyễn Dư Đăng Khoa.</p>
-		<a href="mailto:nguyendudangkhoa08@gmail.com">Click to send emails</a>
+		<h2 id="fb">LIÊN HỆ</h2>
+		<p> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </p>
+		<li> Địa Chỉ: 188 Chợ Lớn, Phường 11, Quận 6, Thành phố Hồ Chí Minh.</li>
+		<li> Xưởng Chế Tạo Máy: B6/7E đường T12, Xã Tân quý Tây, Huyện Bình Chánh, TP HCM. </li>
+		<li> MST: 0314258183</li>
+		<li> Hotline: 0983 361 206 hoặc 0282 253 2876 (Mr. Hải)  </li>
+		<li> Email: chetaomaythienan@gmail.com</li>
+		<li> Fax: 028 2253 2872 </li>
+		<p>Xin chân thành cảm ơn quý khách đã tín nhiệm sản phẩm của chúng tôi.</p>
+		<a href="mailto:chetaomaythienan@gmail.com">Gửi thư tại đây</a>
 	</footer>
 </body>
 </html>
