--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 <body>
 	<div id="logo">
-		<img src="assets/logo.jpg" alt="logo" width="200" height="200" />
+		<img src="assets/header.jpg" alt="logo" width="1330" />
 	</div>
-	<h1> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </h1>
 	<nav> <!--- Menu of website --->
 		<a href="#contact" class="left_menu">GIỚI THIỆU</a>
 		<a href="#machines" class="left_menu">SẢN PHẨM</a>
@@ -80,9 +79,9 @@
 		<h2 id="fb">LIÊN HỆ</h2>
 		<p> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </p>
 		<li> Địa Chỉ: 188 Chợ Lớn, Phường 11, Quận 6, Thành phố Hồ Chí Minh.</li>
-		<li> Xưởng Chế Tạo Máy: B6/7E đường T12, Xã Tân quý Tây, Huyện Bình Chánh, TP HCM. </li>
+		<li> Xưởng Chế Tạo Máy: B6/7E đường T12, Xã Tân Quý Tây, Huyện Bình Chánh, TP HCM. </li>
 		<li> MST: 0314258183</li>
-		<li> Hotline: 0983 361 206 hoặc 0282 253 2876 (Mr. Hải)  </li>
+		<li> Hotline: 0983 361 206 hoặc 028 2253 2876 (Mr. Hải)  </li>
 		<li> Email: chetaomaythienan@gmail.com</li>
 		<li> Fax: 028 2253 2872 </li>
 		<p>Xin chân thành cảm ơn quý khách đã tín nhiệm sản phẩm của chúng tôi.</p>
