--- a/maychietchaibomnhudong4voi.html
+++ b/maychietchaibomnhudong4voi.html
@@ -12,21 +12,21 @@
 </head>
 <body>
 	<div id="logo">
-		<img src="assets/logo.jpg" alt="logo" width="200" height="200" />
+		<img src="assets/header.jpg" alt="logo"/>
 	</div>
-	<h1> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </h1>
 	<br/>
 	<h2 id="maysaytangsoi"> MÁY CHIẾT CHAI BƠM NHU ĐỘNG 4 VÒI </h2>
 	<div id="machines_container">
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-1.jpg" alt="Windows">
+			<div class="machines_description"> Công suất: 40 chai</div>
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-2.jpg" alt="Windows">
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-4.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 40 - 60 chai</div>
+			<div class="machines_description"> Công suất: 60 chai</div>
 		</div>
 	</div>
 </body>
