--- a/noinau-khuaytu.html
+++ b/noinau-khuaytu.html
@@ -12,9 +12,8 @@
 </head>
 <body>
 	<div id="logo">
-		<img src="assets/logo.jpg" alt="logo" width="200" height="200" />
+		<img src="assets/header.jpg" alt="logo"/>
 	</div>
-	<h1> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </h1>
 	<br/>
 	<h2 id="maysaytangsoi"> NỒI NẤU, KHUẤY TỪ </h2>
 	<div id="machines_container">
