--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav> <!--- Menu of website --->
 		<a href="#contact" class="left_menu">GIỚI THIỆU</a>
 		<a href="#machines" class="left_menu">SẢN PHẨM</a>
-		<a href="#fb" class="right_menu">LIÊN HỆ</a>
+		<a href="#fb" class="left_menu">LIÊN HỆ</a>
 	</nav>
 	<div id="flex_container"> <!-- Content container -->
 		<div id="left_side">
@@ -82,8 +82,10 @@
 		<li> Xưởng Chế Tạo Máy: B6/7E đường T12, Xã Tân Quý Tây, Huyện Bình Chánh, TP HCM. </li>
 		<li> MST: 0314258183</li>
 		<li> Hotline: 0983 361 206 hoặc 028 2253 2876 (Mr. Hải)  </li>
-		<li> Email: chetaomaythienan@gmail.com</li>
 		<li> Fax: 028 2253 2872 </li>
+		<li> Email: chetaomaythienan@gmail.com</li>
+		<li> Website: www.chetaomaythienan.com</li>
+		<li> Xem bản đồ <a href="https://goo.gl/maps/dnVV5cBHUxiJSwGn6">tại đây</a></li>
 		<p>Xin chân thành cảm ơn quý khách đã tín nhiệm sản phẩm của chúng tôi.</p>
 		<a href="mailto:chetaomaythienan@gmail.com">Gửi thư tại đây</a>
 	</footer>
