--- a/maytroncube1goi.html
+++ b/maytroncube1goi.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
@@ -12,9 +11,8 @@
 </head>
 <body>
 	<div id="logo">
-		<img src="assets/logo.jpg" alt="logo" width="200" height="200" />
+		<img src="assets/header.jpg" alt="logo"/>
 	</div>
-	<h1> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </h1>
 	<br/>
 	<h2 id="maysaytangsoi"> MÁY TRỘN LẬP PHƯƠNG 1 GỐI </h2>
 	<div id="machines_container">
