--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<li> Fax: 028 2253 2872 </li>
 		<li> Email: chetaomaythienan@gmail.com</li>
 		<li> Website: www.chetaomaythienan.com</li>
-		<li> Xem bản đồ <a href="https://goo.gl/maps/dnVV5cBHUxiJSwGn6">tại đây</a></li>
+		<li> Xem bản đồ <a href="https://goo.gl/maps/dnVV5cBHUxiJSwGn6" target="_blank" rel="noopener noreferrer">tại đây</a></li>
 		<p>Xin chân thành cảm ơn quý khách đã tín nhiệm sản phẩm của chúng tôi.</p>
 		<a href="mailto:chetaomaythienan@gmail.com">Gửi thư tại đây</a>
 	</footer>
