--- a/maychietchaibomnhudong4voi.html
+++ b/maychietchaibomnhudong4voi.html
@@ -19,14 +19,13 @@
 	<div id="machines_container">
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-1.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 40 chai</div>
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-2.jpg" alt="Windows">
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-4.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 60 chai</div>
+			<div class="machines_description"> Công suất: 40 - 60 chai</div>
 		</div>
 	</div>
 </body>
