--- a/mayxathatcaotoc.html
+++ b/mayxathatcaotoc.html
@@ -18,11 +18,10 @@
 	<div id="machines_container">
 		<div class="machines_item">
 			<img class="machines_img" src="assets/7/XatHatCaoToc-1.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 100kg</div>
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/7/XatHatCaoToc-2.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 300kg</div>
+			<div class="machines_description"> Công suất: 100 - 300kg</div>
 		</div>
 	</div>
 </body>
