--- a/mayxathatcaotoc.html
+++ b/mayxathatcaotoc.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/7/XatHatCaoToc-2.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 100 - 300kg</div>
+			<div class="machines_description"> Công suất: 100 - 500kg / giờ</div>
 		</div>
 	</div>
 </body>
