--- a/maychietchaibomnhudong4voi.html
+++ b/maychietchaibomnhudong4voi.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/11/11-7/ChietRot4Voi-4.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 40 - 60 chai</div>
+			<div class="machines_description"> Công suất: 40 - 60 chai / phút</div>
 		</div>
 	</div>
 </body>
