--- a/maynghien-xaybua.html
+++ b/maynghien-xaybua.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/8/XayBua-2.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 100 - 300kg</div>
+			<div class="machines_description"> Công suất: 100 - 300kg / giờ</div>
 		</div>
 	</div>
 </body>
