--- a/maylauviennang.html
+++ b/maylauviennang.html
@@ -22,14 +22,13 @@
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/9/LauVienNang-3.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 200 nghìn nang</div>
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/9/LauVienNang-4.jpg" alt="Windows">
 		</div>
 		<div class="machines_item">
 			<img class="machines_img" src="assets/9/LauVienNang-5.jpg" alt="Windows">
-			<div class="machines_description"> Công suất: 300 nghìn nang</div>
+			<div class="machines_description"> Công suất: 200 - 300 nghìn nang / giờ</div>
 		</div>
 	</div>
 </body>
