--- a/mayruachai.html
+++ b/mayruachai.html
@@ -25,7 +25,7 @@
 			<div class="machines_description"> Công suất: 266 chai</div>
 		</div>
 		<div class="machines_item">
-			<img class="machines_img" src="assets/11/11-4/RuaChai-3.jpg" alt="Windows">
+			<img class="machines_img" src="assets/11/11-4/RuaChai-3.JPG" alt="Windows">
 		</div>
 	</div>
 </body>
