--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<img src="assets/header.jpg" alt="logo" width="1330" />
 	</div>
 	<nav> <!--- Menu of website --->
-		<a href="#contact" class="left_menu">GIỚI THIỆU</a>
-		<a href="#machines" class="left_menu">SẢN PHẨM</a>
-		<a href="#fb" class="left_menu">LIÊN HỆ</a>
+		<strong><a href="#contact" class="left_menu">GIỚI THIỆU</a></strong>
+		<strong><a href="#machines" class="left_menu">SẢN PHẨM</a></strong>
+		<strong><a href="#fb" class="left_menu">LIÊN HỆ</a></strong>
 	</nav>
 	<div id="flex_container"> <!-- Content container -->
 		<div id="left_side">
