--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="First page"/>
 	<meta name="author" content="Khoa"/>
 	<meta name="country" content="Vietnam"/>
+	<meta name="google-site-verification" content="CT31GtMUO65vHYV64pYpAOFEacwIKX-1Wc4aYzgpmz0" />
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/main.js"></script>
 	<link rel="icon" href="assets/logo.jpg" sizes="any" type="image/png">
