--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<h2 id="fb">LIÊN HỆ</h2>
 		<p> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </p>
 		<li> Địa Chỉ: 188 Chợ Lớn, Phường 11, Quận 6, Thành phố Hồ Chí Minh.</li>
-		<li> Xưởng Chế Tạo Máy: B6/7E đường T12, Xã Tân Quý Tây, Huyện Bình Chánh, TP HCM. </li>
+		<li> Xưởng Chế Tạo Máy: 299 (số cũ: B6/7E) đường T12, Xã Tân Quý Tây, Huyện Bình Chánh, TP HCM. </li>
 		<li> MST: 0314258183</li>
 		<li> Hotline: 0983 361 206 hoặc 028 2253 2876 (Mr. Hải)  </li>
 		<li> Fax: 028 2253 2872 </li>
