--- a/maybaophim.html
+++ b/maybaophim.html
@@ -29,6 +29,14 @@
 			<img class="machines_img" src="assets/4/BaoPhim300Kg.jpg" alt="Windows">
 			<div class="machines_description"> Công suất: 300kg</div>
 		</div>
+		<div class="machines_item">
+			<img class="machines_img" src="assets/4/Bao phim 500-1.jpg" alt="Windows">
+			<div class="machines_description"> Công suất: 500kg </div>
+		</div>
+		<div class="machines_item">
+			<img class="machines_img" src="assets/4/Bao phim 500-2.jpg" alt="Windows">
+			<div class="machines_description"> Cụm Xử Lý Gió Ra Máy Bao Phim 500kg </div>
+		</div>
 	</div>
 </body>
 </html>
