--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="description" content="First page"/>
 	<meta name="author" content="Khoa"/>
 	<meta name="country" content="Vietnam"/>
-	<meta name="google-site-verification" content="CT31GtMUO65vHYV64pYpAOFEacwIKX-1Wc4aYzgpmz0" />
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/main.js"></script>
 	<link rel="icon" href="assets/logo.jpg" sizes="any" type="image/png">
@@ -17,9 +16,9 @@
 		<img src="assets/header.jpg" alt="logo" width="1330" />
 	</div>
 	<nav> <!--- Menu of website --->
-		<strong><a href="#contact" class="left_menu">GIỚI THIỆU</a></strong>
-		<strong><a href="#machines" class="left_menu">SẢN PHẨM</a></strong>
-		<strong><a href="#fb" class="left_menu">LIÊN HỆ</a></strong>
+		<a href="#contact" class="left_menu">GIỚI THIỆU</a>
+		<a href="#machines" class="left_menu">SẢN PHẨM</a>
+		<a href="#fb" class="left_menu">LIÊN HỆ</a>
 	</nav>
 	<div id="flex_container"> <!-- Content container -->
 		<div id="left_side">
@@ -80,13 +79,13 @@
 		<h2 id="fb">LIÊN HỆ</h2>
 		<p> CÔNG TY CỔ PHẦN CHẾ TẠO MÁY THIÊN AN </p>
 		<li> Địa Chỉ: 188 Chợ Lớn, Phường 11, Quận 6, Thành phố Hồ Chí Minh.</li>
-		<li> Xưởng Chế Tạo Máy: 299 (số cũ: B6/7E) đường T12, Xã Tân Quý Tây, Huyện Bình Chánh, TP HCM. </li>
+		<li> Xưởng Chế Tạo Máy: 299 (số cũ B6/7E) đường T12, Xã Tân Quý Tây, Huyện Bình Chánh, TP HCM. </li>
 		<li> MST: 0314258183</li>
 		<li> Hotline: 0983 361 206 hoặc 028 2253 2876 (Mr. Hải)  </li>
 		<li> Fax: 028 2253 2872 </li>
 		<li> Email: chetaomaythienan@gmail.com</li>
 		<li> Website: www.chetaomaythienan.com</li>
-		<li> Xem bản đồ <a href="https://goo.gl/maps/dnVV5cBHUxiJSwGn6" target="_blank" rel="noopener noreferrer">tại đây</a></li>
+		<li> Xem bản đồ <a href="https://goo.gl/maps/dnVV5cBHUxiJSwGn6">tại đây</a></li>
 		<p>Xin chân thành cảm ơn quý khách đã tín nhiệm sản phẩm của chúng tôi.</p>
 		<a href="mailto:chetaomaythienan@gmail.com">Gửi thư tại đây</a>
 	</footer>
